feat: add PeoPay page and deployment configuration
- Add new PeoPay page with implementation
- Update navigation components to include PeoPay
- Add Netlify and deployment configuration
- Include team and logo images
- Update blockchain visualization component

Author:    Daniil Kriyhanovskzi <dk.areciboproton.me>
Date:      Tue May 6 23:02:26 2025 +0200
 Changes to be committed:
	new file:   client/public/images/logos/peochain-logo.png
	new file:   client/public/images/peochain-logo.png
	new file:   client/public/images/team/dan-otieno.jpg
	new file:   client/public/images/team/daniil-krizhanovskyi.png
	modified:   client/src/App.tsx
	modified:   client/src/components/layout/header.tsx
	modified:   client/src/components/ui/navigation-menu.tsx
	modified:   client/src/components/visualizations/blockchain-visualization.tsx
	modified:   client/src/index.css
	new file:   client/src/pages/PeoPay.tsx
	modified:   client/src/pages/Whitepaper.tsx
	new file:   netlify.toml
	new file:   windsurf_deployment.yaml

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,14 +9,14 @@
 
   body {
     @apply font-sans antialiased text-foreground;
-    background-color: #fbf8f1;
+    background-color: #ffffff;
   }
 }
 
 @layer components {
   /* Main color scheme */
   .gradient-background {
-    background-color: #fbf8f1;
+    background-color: #ffffff;
   }
 
   .glass {
